--- a/Static/ClassDetailsPage.html
+++ b/Static/ClassDetailsPage.html
@@ -35,7 +35,7 @@
 			  <td width="20%" align="center" bgcolor="#DEE0DF" ><strong>Assignment &amp; Quiz</strong></td>
             <td width="20%" height="21" align="center" bgcolor="#DEE0DF" >&nbsp;<strong>Management</strong>&nbsp;</td>
           </tr>
-          <tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td height="21" align="center">&nbsp;</td>
             <td align="center"><input type="date" name="date" id="date"></td>
             <td align="center">&nbsp;</td>
@@ -43,7 +43,7 @@
             <td height="21" align="center"><input type="button" name="button2" id="button2" value="Edit">
                     <input type="button" name="button3" id="button3" value="Delete"></td>
           </tr>
-          <tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td height="21" align="center">&nbsp;</td>
             <td align="center" ><input type="date" name="date3" id="date3"></td>
             <td align="center" >&nbsp;</td>
