--- a/Static/CoursePage.html
+++ b/Static/CoursePage.html
@@ -34,14 +34,14 @@
 			  <td width="20%" align="center" bgcolor="#DEE0DF" ><strong>Course End Date</strong></td>
             <td width="25%" height="21" align="center" bgcolor="#DEE0DF" >&nbsp;<strong>Management</strong>&nbsp;</td>
           </tr>
-          <tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td height="21" align="center">INFO 5717 - NetworkedDataModelingandProcessing</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td height="21" align="center"><input type="button" name="button2" id="button2" value="Edit">
               <input type="button" name="button3" id="button3" value="Delete"></td>
           </tr>
-          <tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td height="21" align="center">INFO 5707 - Data Modeling for Information Professionals</td>
             <td align="center" >&nbsp;</td>
             <td align="center" >&nbsp;</td>
