--- a/Static/CourseSelectionPage.html
+++ b/Static/CourseSelectionPage.html
@@ -44,36 +44,36 @@
                   <td width="25%" height="21" align="center" bgcolor="#DEE0DF" ><strong>&nbsp;Management</strong>&nbsp;</td>
 					
                 </tr>
-                <tr>
-                  <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td height="21" align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td align="center" valign="middle" bgcolor="#FFFFFF"><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
+                <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
+                  <td align="center" >&nbsp;</td>
+                  <td align="center" >&nbsp;</td>
+                  <td align="center" >&nbsp;</td>
+                  <td height="21" align="center" >&nbsp;</td>
+                  <td align="center" valign="middle" ><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
                     <a href="BasicStudentInformation.html" target="myframe">
                     <input type="button" name="View Details4" id="View Details4" value="Student Details"> <a href="History.html" target="myframe"> <input type="button" name="View Details5" id="View Details7" value="Attendance Details"></td>
-                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><input type="button" name="button2" id="button2" value="Edit">
+                  <td height="21" align="center" valign="middle" ><input type="button" name="button2" id="button2" value="Edit">
                     <input type="button" name="button3" id="button3" value="Delete"></tr>
-                <tr>
-                  <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td height="21" align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td align="center" valign="middle" bgcolor="#FFFFFF"><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
+                <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
+                  <td align="center" >&nbsp;</td>
+                  <td align="center" >&nbsp;</td>
+                  <td align="center" >&nbsp;</td>
+                  <td height="21" align="center" >&nbsp;</td>
+                  <td align="center" valign="middle" ><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
                     <a href="BasicStudentInformation.html" target="myframe">
                     <input type="button" name="View Details4" id="View Details4" value="Student Details"> <a href="History.html" target="myframe"> <input type="button" name="View Details5" id="View Details7" value="Attendance Details"></td>
-                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><input type="button" name="button2" id="button2" value="Edit">
+                  <td height="21" align="center" valign="middle" ><input type="button" name="button2" id="button2" value="Edit">
                     <input type="button" name="button3" id="button3" value="Delete"></td>
                 </tr>
-                <tr>
-                  <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
-                  <td height="21" align="center" bgcolor="#FFFFFF" >&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF" ><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
+                <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
+                  <td align="center" >&nbsp;</td>
+                  <td align="center"  >&nbsp;</td>
+                  <td align="center"  >&nbsp;</td>
+                  <td height="21" align="center"  >&nbsp;</td>
+                  <td align="center" ><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
                     <a href="BasicStudentInformation.html" target="myframe">
                     <input type="button" name="View Details4" id="View Details4" value="Student Details"> <a href="History.html" target="myframe"> <input type="button" name="View Details5" id="View Details7" value="Attendance Details"></td>
-                  <td height="21" align="center" bgcolor="#FFFFFF" ><input type="button" name="button2" id="button2" value="Edit">
+                  <td height="21" align="center" ><input type="button" name="button2" id="button2" value="Edit">
                     <input type="button" name="button3" id="button3" value="Delete"></td>
                 </tr>
               </tbody>
