--- a/Static/ForgotPasswordPage.html
+++ b/Static/ForgotPasswordPage.html
@@ -14,8 +14,9 @@
     <input type="text" id="id2" name="id2">
   </p>
   <p>
-    <input name="submit" type="submit" id="submit" formaction="StudentLoginPage.html" value="Submit">
-    <br>
+    <input name="submit" type="submit" id="submit" formaction="StudentLoginPage.html" value="Submit" onClick="alert('Check your inbox for password reset link');">
+  </p>
+  <p><a href="javascript:history.back();">Back</a><br>
   </p>
 </body>
 </html>
