--- a/Static/TermPage.html
+++ b/Static/TermPage.html
@@ -31,13 +31,13 @@
             <td width="50%" height="21" align="center" bgcolor="#DEE0DF">&nbsp;<strong>Term &nbsp;</strong></td>
             <td width="50%" height="21" align="center" bgcolor="#DEE0DF" >&nbsp;<strong>Management</strong>&nbsp;</td>
           </tr>
-          <tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td height="21" align="center">Spring 2020</td>
             <td height="21" align="center">
 			  <input type="button" name="button2" id="button2" value="Edit">
                     <input type="button" name="button3" id="button3" value="Delete"></td>
-          </tr>
-          <tr>
+          </tr >
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td height="21" align="center">Summer 2020</td>
             <td height="21" align="center" >
 			  <input type="button" name="button2" id="button2" value="Edit">
