--- a/Static/BasicStudentInformation.html
+++ b/Static/BasicStudentInformation.html
@@ -29,25 +29,31 @@
                   <td width="20%" align="center" bgcolor="#DEE0DF"><strong>Student Email</strong></td>
                   <td width="20%" height="21" align="center" bgcolor="#DEE0DF"><strong>Student Photo</strong></td>
                 </tr>
-                <tr>
-                  <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td height="21" align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  </tr>
-                <tr>
-                  <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td height="21" align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  </tr>
-                <tr>
-                  <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
-                  <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
-                  <td height="21" align="center" bgcolor="#FFFFFF" >&nbsp;</td>
-                  </tr>
-              </tbody>
+                <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
+                  <td align="center" >&nbsp;</td>
+                  <td align="center" >&nbsp;</td>
+                  <td align="center" >&nbsp;</td>
+                  <td height="21" align="center" >&nbsp;</td>
+                </tr>
+                <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
+                  <td align="center" >&nbsp;</td>
+                  <td align="center" >&nbsp;</td>
+                  <td align="center" >&nbsp;</td>
+                  <td height="21" align="center" >&nbsp;</td>
+                </tr>
+                <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
+                  <td align="center" >&nbsp;</td>
+                  <td align="center" >&nbsp;</td>
+                  <td align="center" >&nbsp;</td>
+                  <td height="21" align="center" >&nbsp;</td>
+                </tr>
+                <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
+                  <td align="center" >&nbsp;</td>
+                  <td align="center" >&nbsp;</td>
+                  <td align="center" >&nbsp;</td>
+                  <td height="21" align="center" >&nbsp;</td>
+                </tr>
+                </tbody>
             </table></td>
           </tr>
         </tbody>
