--- a/Static/ExtractingComparing.html
+++ b/Static/ExtractingComparing.html
@@ -13,19 +13,17 @@
 <table width="100%" border="0">
   <tbody>
     <tr>
-      <th height="74" colspan="2" align="left" bgcolor="#228744" scope="col" border="0" cellpadding="0" cellspacing="0"><p><img src="images/Extracting.png" width="65" height="60" alt=""/><span style="font-size: 24px; color: #FFFFFF">Extracting &amp; Comparing</span></p></th>
+      <th height="74" align="left" bgcolor="#228744" scope="col" border="0" cellpadding="0" cellspacing="0"><p><img src="images/Extracting.png" width="65" height="60" alt=""/><span style="font-size: 24px; color: #FFFFFF">Extracting &amp; Comparing</span></p></th>
     </tr>
     <tr>
-      <th width="50%" height="18" align="center" bgcolor="#228744" scope="col" border="0" cellpadding="0" cellspacing="0">Extraction</th>
-      <th width="50%" align="center" bgcolor="#228744" scope="col" border="0" cellpadding="0" cellspacing="0"><form action="ComparingPage.html" target="myframe2" method="POST" >
-        <p><input name="submit" type="submit" id="submit" title="submit" value="submit"></p></form></th>
+      <th height="18" align="center" bgcolor="#228744" scope="col" border="0" cellpadding="0" cellspacing="0">Attendance results</th>
     </tr>
     <tr>
-      <th height="18" align="center" scope="col" border="0" cellpadding="0" cellspacing="0"><iframe src="ExtractingPage.html" frameborder="0" height="300" width="100%" name="myframe1" scroll="auto"></iframe>&nbsp;&nbsp;</th>
-      <th align="center" scope="col" border="0" cellpadding="0" cellspacing="0"><iframe  frameborder="0" height="300" width="100%" name="myframe2"></iframe>&nbsp;&nbsp;</th>
+      <th height="18" align="center" scope="col" border="0" cellpadding="0" cellspacing="0">&nbsp;&nbsp;
+      <iframe src="ComparingPage.html" frameborder="0" height="300" width="100%" name="myframe2"></iframe>&nbsp;&nbsp;</th>
     </tr>
     <tr>
-      <td colspan="2" bgcolor="#FFFFFF"></td>
+      <td bgcolor="#FFFFFF"></td>
     </tr>
   </tbody>
 </table>
