--- a/Static/History.html
+++ b/Static/History.html
@@ -16,176 +16,113 @@
       <td width="98%"><table width="100%" border="1" cellpadding="0" cellspacing="0">
         <tbody>
           <tr>
-            <td width="12%" align="center" valign="middle" bgcolor="#DEE0DF">Date</td>
+            <td height="21" colspan="6" align="left" valign="middle" bgcolor="#ACB0AE"><label for="date">Date:</label>
+              <input type="date" name="date" id="date"></td>
+            </tr>
+          <tr>
             <td width="18%" height="21" align="center" bgcolor="#DEE0DF">Student Number</td>
             <td width="14%" height="21" align="center" bgcolor="#DEE0DF">Student Name</td>
-            <td width="14%" height="21" align="center" bgcolor="#DEE0DF">Term</td>
             <td width="14%" height="21" align="center" bgcolor="#DEE0DF">Course</td>
-            <td width="14%" height="21" align="center" bgcolor="#DEE0DF">Attendance Rate</td>
+            <td width="14%" align="center" bgcolor="#DEE0DF">Date</td>
+            <td width="14%" height="21" align="center" bgcolor="#DEE0DF">Attended</td>
             <td width="14%" align="center" bgcolor="#DEE0DF">Student Photo</td>
             </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td height="44" align="center">&nbsp;2020A001</td>
             <td align="center">&nbsp;Willem Baxter</td>
-            <td align="center">&nbsp;Spring 2020</td>
             <td align="center">INFO 5707 - Data Modeling for Information Professionals</td>
             <td align="center">&nbsp;</td>
+            <td align="center">Yes</td>
             <td align="center"><img src="images/Willem Baxter.jpg" width="43" height="41" alt=""/></td>
             </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;2020A002</td>
             <td align="center">&nbsp;Samantha Chu</td>
-            <td align="center">&nbsp;Spring 2020</td>
             <td align="center">INFO 5707 - Data Modeling for Information Professionals</td>
             <td align="center">&nbsp;</td>
+            <td align="center">No</td>
             <td align="center"><img src="images/Samantha Chu.jpg" width="43" height="41" alt=""/></td>
             </tr>
-          <tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
+          </tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
+          </tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
+          </tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
+          </tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
+          </tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
             <td align="center">&nbsp;</td>
+          </tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
+          </tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
+          </tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
+          </tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
+          </tr>
         </tbody>
       </table></td>
       <td width="1%"bgcolor="#228744">&nbsp;</td>
