--- a/Static/StudentAppeals.html
+++ b/Static/StudentAppeals.html
@@ -9,7 +9,7 @@
 <table width="100%" border="0">
   <tbody>
     <tr bgcolor="#751D1F">
-      <th colspan="3" align="left" valign="middle" bgcolor="#06993C" scope="col"><img src="images/Attendance2.png" width="47" height="41" alt=""/><span style="font-size: 24px; color: #FFFFFF;"><span style="font-size: 36px">Attendance</span>&nbsp;</span></th>
+      <th colspan="3" align="left" valign="middle" bgcolor="#06993C" scope="col"><img src="images/Attendance2.png" width="47" height="41" alt=""/><span style="font-size: 24px; color: #FFFFFF;"><span style="font-size: 36px">Attendance appeals</span></span></th>
     </tr>
     <tr>
       <td width="1%" bgcolor="#06993C">&nbsp;</td>
@@ -25,7 +25,7 @@
               </select>
               <label for="date"> Date:</label>
               <input type="date" name="date" id="date">
-			  <input type="submit" name="search" id="search" value="Search">
+			  <input type="submit" name="search" id="search" value="Select">
 			  </th>
 			</tr>
 		  </tbody>
@@ -36,57 +36,45 @@
             <th width="10%" height="25" bgcolor="#DEE0DF" scope="col">Date</th>
             <th width="25%" scope="col">Course</th>
             <th width="10%" scope="col">Presence</th>
-            <th width="10%" scope="col">Absence</th>
-            <th width="20%" scope="col">Appeal request</th>
+            <th width="10%" scope="col">Abscence</th>
             </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
-            <th scope="col"><input type="submit" name="submit" id="submit" value="Send" onClick="alert('Appeal request sent!');"></th>
-          </tr>
+            </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
-            <th scope="col"><input type="submit" name="submit2" id="submit2" value="Send" onClick="alert('Appeal request sent!');"></th>
-          </tr>
+            </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
-            <th scope="col"><input type="submit" name="submit3" id="sbmit3" value="Send" onClick="alert('Appeal request sent!');"></th>
-          </tr>
+            </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
-            <th scope="col"><input type="submit" name="submit" id="submit" value="Send" onClick="alert('Appeal request sent!');"></th>
-          </tr>
+            </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
-            <th scope="col"><input type="submit" name="submit3" id="submit3" value="Send" onClick="alert('Appeal request sent!');"></th>
-          </tr>
+            </tr>
         </tbody>
       </table></td>
       <td width="1%" bgcolor="#06993C">&nbsp;</td>
     </tr>
     <tr bgcolor="#751D1F">
-    <td height="40" colspan="3" align="left" bgcolor="#06993C">
+    <td height="30" colspan="3" align="left" bgcolor="#06993C">
 		<a href="AppealPage.html" target="myframe">
-			<button onclick="myFunction()">LogOut</button>
-			<script>
-			function myFunction() {
-			  location.replace("StudentLoginPage.html")
-			}
-			</script>
 	</tr>
   </tbody>
 </table>
