--- a/Static/StudentSignUpPage.html
+++ b/Static/StudentSignUpPage.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>StudentSignUpPage</h1>
+<h1>Student Sign Up</h1>
 <p>
   <label for="fname">First Name: </label>
     <input type="text" id="fname" name="fname">
@@ -26,7 +26,10 @@
   <p>
     <label for="password2">Confirm Password:</label>
     <input type="password" name="password2" id="password2">
-<br>
+</p>
+  <p>
+    <input type="submit" name="submit" id="submit" value="Submit" onClick="alert('Your account has been created!');">
+    <br>
   </p>
   <form action="StudentLoginPage.html" method="POST">
 	  <p>
