--- a/Static/TermPage.html
+++ b/Static/TermPage.html
@@ -31,15 +31,6 @@
 			}else
 				alert("Record not deleted")
 	}
-		function pmt()
-	{
-		var pmt=prompt("Please add a term");
-		if(pmt==null || pmt=="")
-			{
-				alert("No term was added to the table");
-			}else
-				alert("The term ".concat(pmt).concat(" was added to the table"))
-	}
 </script>
 <body style="text-align: center">
 <table width="100%" border="0">
@@ -57,7 +48,7 @@
                 <tr>
                   <th width="45%" height="19" align="right" valign="middle" bgcolor="#A1A6A3" scope="col"><label for="textfield">Term:&nbsp;</label>
                     <input type="text" name="textfield" id="textfield">
-                    <input type="button" name="button" id="button" value="Add" onClick="pmt();"></th>
+                    <input type="button" name="button" id="button" value="Add"></th>
 </tr>
               </tbody>
             </table></th>
