--- a/Static/RollCallPage.html
+++ b/Static/RollCallPage.html
@@ -24,6 +24,8 @@
 .close3 {
   color: #aaaaaa;float: right;font-size: 28px;font-weight: bold;
 }
+
+
 .close:hover,
 .close1:hover,
 .close2:hover,
@@ -40,6 +42,8 @@
 .close3:focus {
   color: #000;text-decoration: none;cursor: pointer;
 	}
+
+
 </style>
 
 <meta charset="UTF-8">
@@ -80,7 +84,7 @@
 	<img src="./images/import_1.PNG" width="30" height="30" >
 	</button>
 	<button id="myBtn2">
-	<img  src="images/UploadIcon.png" width="30" height="30" >
+	<img  src="images/starticon.jpg" width="30" height="30" >
 	</button>
 	<button id="myBtn3">
 	<img   src="images/history.jpg" width="30" height="30" >
@@ -89,7 +93,7 @@
 <div class="modal-content">
     <span class="close">&times;</span>
 	<div id="frameholder">
-		<iframe width="100%" height="300px" frameborder="0" src="./CourseSelectionPage.html" name="full_info">
+		<iframe width="100%" height="300px" frameborder="0" src="coursepopup.html" name="full_info">
 		</iframe>
 	</div>
   </div>
@@ -110,7 +114,7 @@
 <div class="modal-content">
     <span class="close2">&times;</span>
 	<div id="frameholder">
-		<iframe width="100%" height="300px" frameborder="0" scrolling="yes" src="./UploadClassStudentPhotoPage.html" name="full_info">
+		<iframe width="100%" height="300px" frameborder="0" src="./UploadClassStudentPhotoPage.html" name="full_info">
 		</iframe>
 	</div>
   </div>
@@ -192,8 +196,6 @@ window.onclick = function(event) {
           <tr>
             <td width="87" height="21" align="center" bgcolor="#DEE0DF">Student Number</td>
             <td width="106" height="21" align="center" bgcolor="#DEE0DF">Student Name</td>
-            <td width="194" align="center" bgcolor="#DEE0DF"><label for="date">Date:</label>
-              <input type="date" name="date" id="date"></td>
             <td width="93" height="21" align="center" bgcolor="#DEE0DF">Term</td>
             <td width="235" height="21" align="center" bgcolor="#DEE0DF">Course</td>
             <td width="218" height="21" align="center" bgcolor="#DEE0DF">Attended (Y/N)</td>
@@ -203,7 +205,6 @@ window.onclick = function(event) {
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td height="44" align="center">&nbsp;<a href="StudentRecord.html">2020A001</a></td>
             <td align="center">&nbsp;Willem Baxter</td>
-            <td align="center">&nbsp;</td>
             <td align="center">&nbsp;Spring 2020</td>
             <td align="center">INFO 5707 - Data Modeling for Information Professionals</td>
             <td align="center">Y(100%)</td>
@@ -217,7 +218,6 @@ window.onclick = function(event) {
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;2020A002</td>
             <td align="center">&nbsp;Samantha Chu</td>
-            <td align="center">&nbsp;</td>
             <td align="center">&nbsp;Spring 2020</td>
             <td align="center">INFO 5707 - Data Modeling for Information Professionals</td>
             <td align="center">&nbsp;</td>
@@ -236,20 +236,8 @@ window.onclick = function(event) {
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
           </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-          </tr>
-          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
-            <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
@@ -266,10 +254,17 @@ window.onclick = function(event) {
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
           </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;</td>
+            <td align="center">&nbsp;</td>
+            <td align="center">&nbsp;</td>
+            <td align="center">&nbsp;</td>
+            <td align="center">&nbsp;</td>
+            <td align="center">&nbsp;</td>
+            <td align="center">&nbsp;</td>
+          </tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
